--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 1em;
 }
 
 .read-the-docs {
@@ -52,4 +52,25 @@
 
 .inner-overlay {
   height: 100%
+}
+
+.no-margin {
+  margin-block: 0 !important;
+}
+
+.left-text {
+  text-align: left;
+}
+
+.logs-box {
+  height: 200px;
+  width: 100%;
+}
+
+.logs-box.wrapper {
+  height:'100%'
+}
+
+.logs-box.input {
+  height:'100%'
 }
